# Helbreath-3.82

./: .gitignore  CHANGELOG.md  CLAUDE_ARCHITECTURE.md  CLAUDE_BULKSCRIPTS_DRYRUN_STANDARDS.md  CLAUDE_CHANGELOG.md  CLAUDE_WORKFLOW.md  Helbreath.sln  VERSION_STANDARDS.md  build.sh  build_game.ps1  build_game_release_sfml.bat  build_server.ps1  build_server_linux.sh  claude.md  controller_migration.py  strings.json  tmpclaude-acea-cwd
.claude/: settings.local.json
Binaries/Game/: settings.json
Binaries/Server/: GameConfigs.db  GameConfigs.db.bak  HBServer  MapInfo.db  MapInfo.db.bak  Server-Linux  mapinfo.db.bak  migrate_remove_dynamic_appearance.py  run_server.sh
Dependencies/Shared/: BitmapFontFactory.h  ColorUtils.h  IInput.h  IRenderer.h  ISprite.h  ISpriteFactory.cpp  ISpriteFactory.h  ITexture.h  IWindow.h  RenderConstants.h  RendererFactory.h  SpriteCollection.h  SpriteTypes.h
Scripts/: bak.py  build_sfml.bat  check_processes.ps1  clean_and_build.ps1  client_methods_snake_case.py  client_snake_case.py  f15_f17_remove_windows_h.py  f16_f10_paths_zeromemory.py  f1_remove_winmain_include.py  f3_systemtime.py  f4_f5_f6_f11_fileio.py  f9_stricmp.py  gen_embedded_icon.py  gen_visual_index2.py  grep.py  migrate_quest_target_column.py  migrate_quest_target_values.py  migrate_shop_mapping.py  phase_d1_client_win_types.py  phase_d2c_snake_case.py  phase_e4_server_logging.py  phase_member_prefix.py  phase_member_prefix_fixup.py  phase_shield_glare.py  phase_snake_client_members.py  phase_snake_client_methods2.py  phase_snake_client_structs.py  phase_snake_collisions.py  phase_snake_params.py  phase_snake_server_structs.py  phase_snake_sfml_members.py  phase_snake_shared_interfaces.py  reset_passwords.py  server_method_snake_case.py  server_snake_case.py
Scripts/output/: dry_run_output.txt  game_diff_sample.txt  phase9_files.txt  survey_messages.txt
Scripts/standards/: agent_1_apply.py  agent_2_apply.py  agent_3_apply.py  agent_4_apply.py  agent_5_apply.py  agent_6_apply.py  agent_7_apply.py  agent_8_apply.py
Sources/: Helbreath.sln  build.ps1  build_client_linux.sh  build_game_ddraw.bat  build_game_release_ddraw.bat  build_game_sfml.bat  build_linux.sh  version.cfg  version.cmake  version_gen.py
Sources/Client/: ActionID_Client.h  AnimationState.cpp  AnimationState.h  AppearanceData.cpp  AppearanceData.h  Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  Benchmark.h  BuildItem.h  BuildItemManager.cpp  BuildItemManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CharInfo.h  ChatCommandManager.cpp  ChatCommandManager.h  ChatManager.cpp  ChatManager.h  ChatMsg.h  Client.vcxproj  Client.vcxproj.filters  ClientLog.cpp  ClientLogChannels.h  ClientMessages.h  CmdIgnore.cpp  CombatSystem.cpp  CombatSystem.h  CommonTypes.h  ConfigManager.cpp  ConfigManager.h  CraftingManager.cpp  CraftingManager.h  CursorTarget.cpp  CursorTarget.h  DXC_dinput.cpp  DevConsole.cpp  DevConsole.h  (+272 more)
Sources/Client/Debug-DDraw/: Game.exe.recipe  vc143.idb
Sources/Client/Debug-DDraw/Game.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Sources/Client/Debug-SFML/: Game.exe.recipe  vc143.idb
Sources/Client/Debug-SFML/Game.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
Sources/Client/Debug_x64/: renderhelpers.obj.enc
Sources/Client/Release-SFML/: Game.exe.recipe  Game.res
Sources/Client/Release-SFML/Game.tlog/: CL.11448.write.1.tlog  CL.command.1.tlog  Cl.items.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Sources/DDrawEngine/: DDrawBitmapFont.cpp  DDrawBitmapFont.h  DDrawEngine.vcxproj  DDrawRenderer.cpp  DDrawRenderer.h  DDrawSprite.cpp  DDrawSprite.h  DDrawSpriteFactory.cpp  DDrawSpriteFactory.h  DDrawTextRenderer.cpp  DDrawTextRenderer.h  DDrawTexture.cpp  DDrawTexture.h  DXC_ddraw.cpp  DXC_ddraw.h  Mydib.cpp  Mydib.h  RendererFactory.cpp  Sprite.cpp  Sprite.h  Win32Input.cpp  Win32Input.h  Win32Window.cpp  Win32Window.h
Sources/Debug_x64/: GameConfigs.db
Sources/SFMLEngine/: PixelConversion.h  RendererFactory.cpp  SFMLBitmapFont.cpp  SFMLBitmapFont.h  SFMLEngine.vcxproj  SFMLEngine.vcxproj.filters  SFMLInput.cpp  SFMLInput.h  SFMLRenderer.cpp  SFMLRenderer.h  SFMLSprite.cpp  SFMLSprite.h  SFMLSpriteFactory.cpp  SFMLSpriteFactory.h  SFMLTextRenderer.cpp  SFMLTextRenderer.h  SFMLTexture.cpp  SFMLTexture.h  SFMLWindow.cpp  SFMLWindow.h
Sources/Server/: AccountSqliteStore.cpp  AccountSqliteStore.h  ActionID_Server.h  BuildItem.h  CMakeLists.txt  ChatLog.cpp  ChatLog.h  Client.cpp  Client.h  CmdBroadcast.cpp  CmdBroadcast.h  CmdGiveItem.cpp  CmdGiveItem.h  CmdHelp.cpp  CmdHelp.h  CmdReload.cpp  CmdReload.h  CmdSetAdmin.cpp  CmdSetAdmin.h  CmdSetCmdLevel.cpp  CmdSetCmdLevel.h  CmdShowChat.cpp  CmdShowChat.h  CmdShutdown.cpp  CombatManager.cpp  CombatManager.h  CommonTypes.h  CraftingManager.cpp  CraftingManager.h  CrusadeCore.h  DelayEvent.h  DelayEventManager.cpp  DelayEventManager.h  DynamicObject.h  DynamicObjectManager.cpp  DynamicObjectManager.h  EntityManager.cpp  EntityManager.h  Fish.h  FishingManager.cpp  (+104 more)
Sprite Work/BMP Version/: DialogText.pak
Sprite Work/GameDialog/: DialogText_rectangles_0.json  DialogText_rectangles_1.json  DialogText_sprite_0.psd  GameDialog_rectangles_0.json  GameDialog_sprite_9.psd  SystemMenuDialog.psd
Sprite Work/New-Dialog/: New-Dialog_sprite_0.psd
Sprite Work/female_hair/: Whr_rectangles_24.json  Whr_rectangles_32.json
Sprite Work/male_hair/: Mhr_rectangles_34.json
tools/DisplayIDManager/: pak_generator.py
tools/Drops/: README.md  changelog.txt  drop_manager.html  drop_manager_server.py  export_drops_snapshot.py  restore_all_drops.py
tools/InstallerCreator/: installer.json  make_installer.py
(+234 files in other folders)
